<resources>
    <string name="app_name">MovieUp</string>
    <!-- Strings related to login -->
    <string name="login_name">Σύνδεση μέσω Email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Κωδικός</string>
    <string name="action_sign_in">Σύνδεση</string>
    <string name="welcome">"Καλώς ήρθες !"</string>
    <string name="invalid_username">Μη έγκυρη διεύθυνση email</string>
    <string name="invalid_password">Ο κωδικός πρέπει να έχει μήκος άνω των 5 χαρακτήρων</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_name">Εγγραφή μέσω Email</string>
    <string name="prompt_name">Όνομα</string>
    <string name="prompt_retype_password">Επανάληψη κωδικού</string>
    <string name="action_sign_up">Εγγραφή</string>

    <!-- Strings related to splash -->
    <string name="imgContentDesc">Image logo</string>
    <string name="first_message">Πρέπει να συνδεθείτε για να προχωρήσετε</string>
    <string name="connectFacebook">Σύνδεση μέσω Facebook</string>
    <string name="connectGoogle">Σύνδεση μέσω Google</string>
    <string name="connectEmail">Σύνδεση μέσω Email</string>
    <string name="signupEmail"><u>Δημιουργία Λογαριασμού</u></string>

    <!-- Strings related to main -->
    <string name="txtName">Καλώς ήρθες</string>
    <string name="verify_email">Παρακαλώ επιβεβαιώστε το email σας!</string>
    <string name="action_settings">Ρυθμίσεις</string>
    <string name="action_about">Σχετικά</string>
    <string name="TerminateButton">Τερματισμός</string>

    <!-- Strings related to sign-up authentication -->
    <string name="password_mismatch">Οι κωδικοί δεν ταιριάζουν</string>
    <string name="empty_name">Το όνομα είναι κενό</string>
    <string name="signup_failed">Η εγγραφή απέτυχε</string>
    <string name="email_sent">Αποστολή email επιβεβαίωσης στο</string>
    <string name="email_failed">Αποτυχία αποστολής email επιβεβαίωσης!</string>

    <!-- Strings related to additional functionality -->
    <string name="FacialRecognitionButton">Αναγνώριση προσώπου</string>
    <string name="ShootButton">Λήψη φωτογραφίας</string>
    <string name="WatchListButton">Λίστα Θέασης</string>
    <string name="txtWatchlist">My Watchlist</string>
    <string name="SearchButton">Αναζήτηση Έργου</string>
    <string name="search_prompt">Εισάγετε όνομα ταινίας ή σειράς</string>
</resources>